syntax = "proto3";

package deltadb;

option go_package = "delta-db/api/proto;proto";

// MainWorker defines the RPCs used by Processing Workers to subscribe and process requests.
service MainWorker {
  // Subscribe registers a Processing Worker and returns a token and wrapped key material.
  rpc Subscribe(SubscribeRequest) returns (SubscribeResponse);

  // Process performs internal GET/PUT operations for database entities.
  rpc Process(ProcessRequest) returns (ProcessResponse);
}

message SubscribeRequest {
  string worker_id = 1;
  bytes pubkey = 2;
  map<string, string> tags = 3;
}

message SubscribeResponse {
  string token = 1;
  bytes wrapped_key = 2;
  string key_id = 3;
}

message ProcessRequest {
  string database_name = 1;
  string entity_key = 2;
  string schema_id = 3;
  string operation = 4; // GET, PUT, or DELETE
  bytes payload = 5;
  string token = 6;
}

message ProcessResponse {
  string status = 1;
  bytes result = 2;
  string version = 3;
  string error = 4;
}
